UI tweaks: Split screen PiP flicker fix.
Stopped the resizing that occurred when opening the Uber bar. As this
caused flicker and gamma issues.

This means there'll be 35px of wasted rendering when it's open (just
like the main view/holodeck).

--- a/client_mods/com.pa.n30n.ui_tweaks/ui/mods/ui_tweaks/pip/live_game.css
+++ b/client_mods/com.pa.n30n.ui_tweaks/ui/mods/ui_tweaks/pip/live_game.css
@@ -4,9 +4,8 @@
 
 .pip_open.split_screen holodeck.pip.bottom_right:not(.gSecondPip) {
 	width: calc(50% - 2px);
-	height: auto;
+	height: calc(100% - 2px);
 	top: 1px;
-	bottom: 1px !important;
 	border: 0;
 	z-index: -2;
 }
